# hermes-yt_transcriber-mcp

./: .gitignore  README.md  pyproject.toml
hermes_youtube_transcript_mcp/: __init__.py  core.py  server.py
tests/: test_core.py
